web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-function-name2/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,40)
1|a = async function () { async function await() {} }
 |                                      ^
